tests/baselines/reference/parserExportAssignment5.errors.txt
tests/cases/conformance/parser/ecmascript5/ExportAssignments/parserExportAssignment5.ts(2,5): error TS1063: A default export can only be used in an ECMAScript-style module.


==== tests/cases/conformance/parser/ecmascript5/ExportAssignments/parserExportAssignment5.ts (1 errors) ====
    module M {
        export = A;
        ~~~~~~~~~~~
!!! error TS1063: A default export can only be used in an ECMAScript-style module.
    }